--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<span class="uk-text-small uk-text-muted">© 2018 Marianne foundation - <a href="#">Created by Michael Rozsypal, Oscar Olazabal, Marianne Tolentino</a></span>
 			</div>
 			<div class="uk-width-medium uk-padding-small">
-				<form action="dog.html">
+				<form action="results.html" method="POST">
 					<fieldset class="uk-fieldset">
                         <legend class="uk-legend">School Database</legend>
                         <!--Professor-->
@@ -24,11 +24,12 @@
 
                         <!--Find schedule field-->
                         <div class="uk-margin" id="professor" hidden>
-                            <form action="dog.html">
+                            <form action="results.html">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
-                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text">
+                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text" name="sno">
+                                        <input type="submit">
                                     </div>
                                 </div>
                                 <div class="uk-margin-small">
@@ -38,7 +39,7 @@
 
                         <!--Check grades field-->
                             <div class="uk-margin">
-                                <form action="dog.html">
+                                <form action="results.html">
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -65,7 +66,7 @@
 
                         <!--Find schedule field-->
                         <div class="uk-margin-small-top" id="student" hidden>
-                            <form action="dog.html">
+                            <form action="results.html">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -79,7 +80,7 @@
 
                         <!--Check grades field-->
                             <div class="uk-margin">
-                                <form action="dog.html">
+                                <form action="results.html">
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -101,6 +102,34 @@
 		
 		<!-- JS FILES -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
 	</body>
 </html>
+
+<?php
+    $line = file('config');
+    $credentials = array();
+    $line = trim(str_replace(": ", ':', $line));
+    $lineArr = explode(' ', $line);
+    $database = explode(':', $lineArr[0]);
+    $database = array_pop($database);
+    $username = explode(':', $lineArr[1]);
+    $username = array_pop($username);
+    $password = explode(':', $lineArr[2]);
+    $password = array_pop($password);
+
+    $link = mysql_connect($database, $username, $password);
+    if (!$link) {
+        die('Could not connect: ' . mysql_error());
+    }
+    echo 'Connected successfully<p>';
+    mysql_select_db($username, $link);
+
+    $query = "SELECT * FROM professor WHERE ssn=" . $_POST["sno"];
+    $result = mysql_query($query,$link); •
+
+    printf("SSN: %s<br>\n", mysql_result($result, 0, "ssn"));
+    printf("First NAME: %s<br>\n", mysql_result($result, 0, "name"));
+
+    mysql_close($link);
+?>
