move php to results page

--- a/results.html
+++ b/results.html
@@ -1,22 +1,31 @@
-<!DOCTYPE html>
-<html lang="en" class="uk-height-1-1">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Login - UIkit 3 KickOff</title>
-		<link rel="icon" href="img/favicon.ico">
-		<!-- CSS FILES -->
-		<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
-	</head>
-	<body class="uk-height-1-1">
-		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-secondary uk-height-viewport uk-light">
-			<div class="uk-width-medium uk-padding-small">
-				<img data-src="https://i.imgur.com/TmHepa0.jpg" width="" height="" alt="" uk-img>
-			</div>
-		</div>
-		
-		<!-- JS FILES -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
-	</body>
+<html>
+<body>
+<?php
+    $line = file('config');
+    $credentials = array();
+    $line = trim(str_replace(": ", ':', $line));
+    $lineArr = explode(' ', $line);
+    $database = explode(':', $lineArr[0]);
+    $database = array_pop($database);
+    $username = explode(':', $lineArr[1]);
+    $username = array_pop($username);
+    $password = explode(':', $lineArr[2]);
+    $password = array_pop($password);
+
+    $link = mysql_connect($database, $username, $password);
+    if (!$link) {
+        die('Could not connect: ' . mysql_error());
+    }
+    echo 'Connected successfully<p>';
+    mysql_select_db($username, $link);
+
+    $query = "SELECT * FROM professor WHERE ssn=" . $_POST["sno"];
+    $result = mysql_query($query,$link); •
+
+    printf("SSN: %s<br>\n", mysql_result($result, 0, "ssn"));
+    printf("First NAME: %s<br>\n", mysql_result($result, 0, "name"));
+
+    mysql_close($link);
+?>
+</body>
 </html>
