results.html to php

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<span class="uk-text-small uk-text-muted">© 2018 Marianne foundation - <a href="#">Created by Michael Rozsypal, Oscar Olazabal, Marianne Tolentino</a></span>
 			</div>
 			<div class="uk-width-medium uk-padding-small">
-				<form action="results.html" method="POST">
+				<form action="results.php" method="POST">
 					<fieldset class="uk-fieldset">
                         <legend class="uk-legend">School Database</legend>
                         <!--Professor-->
@@ -24,7 +24,7 @@
 
                         <!--Find schedule field-->
                         <div class="uk-margin" id="professor" hidden>
-                            <form action="results.html">
+                            <form action="results.php">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -38,7 +38,7 @@
 
                         <!--Check grades field-->
                             <div class="uk-margin">
-                                <form action="results.html">
+                                <form action="results.php">
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -65,7 +65,7 @@
 
                         <!--Find schedule field-->
                         <div class="uk-margin-small-top" id="student" hidden>
-                            <form action="results.html">
+                            <form action="results.php">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
@@ -79,7 +79,7 @@
 
                         <!--Check grades field-->
                             <div class="uk-margin">
-                                <form action="results.html">
+                                <form action="results.php">
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
