attempt to fix input

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
                         <!--Find schedule field-->
                         <div class="uk-margin" id="professor" hidden>
-                            <form action="results.php" action="results.php" method="POST">
+                            <form action="results.php" method="POST">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
-                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="number" name="sno">
+                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text" name="sno">
                                     </div>
                                 </div>
                                 <div class="uk-margin-small">
