--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Login - UIkit 3 KickOff</title>
+		<title>School Database</title>
 		<link rel="icon" href="img/favicon.ico">
 		<!-- CSS FILES -->
 		<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
@@ -22,8 +22,8 @@
 							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #professor;animation: uk-animation-slide-top-small">Professor</button>
                         </div>
 
-                        <!--Find schedule field-->
                         <div class="uk-margin" id="professor" hidden>
+                        <!--Find schedule field-->
                             <form action="results.php" method="POST">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
@@ -56,15 +56,16 @@
                                     </div>
                                 </form>
                             </div>
+                            <a data-uk-toggle="target: #professor,#home;animation: uk-animation-slide-top-small"><legend class="uk-legend">Back</legend></a>
                         </div>
 
                         <!--Student-->
 						<div class="uk-margin" id="professor">
-							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student;animation: uk-animation-slide-top-small">Student</button>
+							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student; animation: uk-animation-slide-top-small">Student</button>
                         </div>
 
-                        <!--Find schedule field-->
                         <div class="uk-margin-small-top" id="student" hidden>
+                            <!--Find schedule field-->
                             <form action="results.php">
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
@@ -77,7 +78,7 @@
                                 </div>
                             </form>
 
-                        <!--Check grades field-->
+                            <!--Check grades field-->
                             <div class="uk-margin">
                                 <form action="results.php">
                                     <div class="uk-margin-small">
@@ -91,6 +92,7 @@
                                     </div>
                                 </form>
                             </div>
+                            <a data-uk-toggle="target: #student,#home; animation: uk-animation-slide-top-small"><legend class="uk-legend">Back</legend></a>
                         </div>
 
 					</fieldset>
