--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/uikit.min.css">
 	</head>
 	<body class="uk-height-1-1">
-		<div class="uk-flex uk-flex-center uk-flex-middle uk-background-secondary uk-height-viewport uk-light">
+		<div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport">
 			<div class="uk-position-bottom-center uk-position-small uk-visible@m">
 				<span class="uk-text-small uk-text-muted">© 2018 Marianne foundation - <a href="#">Created by Michael Rozsypal, Oscar Olazabal, Marianne Tolentino</a></span>
 			</div>
@@ -28,7 +28,7 @@
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
-                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text" name="socal_security_number">
+                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text" name="social_security_number">
                                     </div>
                                 </div>
                                 <div class="uk-margin-small">
