--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 	<body class="uk-height-1-1">
 		<div class="uk-flex uk-flex-center uk-flex-middle uk-height-viewport">
 			<div class="uk-position-bottom-center uk-position-small uk-visible@m">
-				<span class="uk-text-small uk-text-muted">© 2018 Marianne foundation - <a href="#">Created by Michael Rozsypal, Oscar Olazabal, Marianne Tolentino</a></span>
+				<span class="uk-text-small uk-text-muted">© 2018 Marianne foundation - Created by Michael Rozsypal, Oscar Olazabal, Marianne Tolentino</span>
 			</div>
 			<div class="uk-width-medium uk-padding-small">
 					<fieldset class="uk-fieldset">
-                        <legend class="uk-legend">School Database</legend>
+			<h2 id="header" class="uk-heading-line uk-text-center uk-padding-small"><span>School Database</span></h2>
+                        <a href=""><legend id="back" class="uk-legend" hidden>Back</legend></a>
 
                         <!--Professor-->
 						<div class="uk-margin" id="student">
-							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #professor;animation: uk-animation-slide-top-medium">Professor</button>
+							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #professor,#back,#header;animation: uk-animation-slide-bottom-medium">Professor</button>
                         </div>
 
                         <div class="uk-margin" id="professor" hidden>
@@ -56,12 +57,11 @@
                                     </div>
                                 </form>
                             </div>
-                            <a data-uk-toggle="target: #professor,#home;animation: uk-animation-slide-bottom-medium"><legend class="uk-legend">Back</legend></a>
                         </div>
 
                         <!--Student-->
 						<div class="uk-margin" id="professor">
-							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student; animation: uk-animation-slide-bottom-medium">Student</button>
+							<button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student,#back,#header; animation: uk-animation-slide-bottom-medium">Student</button>
                         </div>
 
                         <div class="uk-margin-small-top" id="student" hidden>
@@ -92,7 +92,6 @@
                                     </div>
                                 </form>
                             </div>
-                            <a data-uk-toggle="target: #student,#home; animation: uk-animation-slide-top-medium"><legend class="uk-legend">Back</legend></a>
                         </div>
 
 					</fieldset>
