--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                         <!--Professor-->
                         <div class="uk-margin" id="student">
-                            <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #professor,#back,#header;animation: uk-animation-slide-bottom-medium">Professor</button>
+                            <button type="submit" id="professor_button" onclick="disable('professor_button')" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #professor,#back,#header;animation: uk-animation-slide-bottom-medium">Professor</button>
                         </div>
 
                         <div class="uk-margin" id="professor" hidden>
@@ -61,7 +61,7 @@
 
                         <!--Student-->
                         <div class="uk-margin" id="professor">
-                            <button type="submit" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student,#back,#header; animation: uk-animation-slide-bottom-medium">Student</button>
+                            <button type="submit" id="student_button" onclick="disable('student_button')" class="uk-button uk-button-primary uk-button-primary uk-button-large uk-width-1-1 uk-link-reset" data-uk-toggle="target: #student,#back,#header; animation: uk-animation-slide-bottom-medium">Student</button>
                         </div>
 
                         <div class="uk-margin-small-top" id="student" hidden>
@@ -84,7 +84,7 @@
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
-                                            <input class="uk-input" name='cwid' placeholder="CWID" required type="text">
+                                            <input class="uk-input" name='cwid' placeholder="campus-wide ID" required type="text">
                                         </div>
                                     </div>
                                     <div class="uk-margin-small">
@@ -103,3 +103,13 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
     </body>
 </html>
+
+<script>
+    function disable(id){
+        var button = document.getElementById(id);
+        button.setAttribute("disabled", "disabled"); 
+        button.style.border = 0
+        button.style.textTransform = "none"
+        button.style.fontSize = "25px"
+    }
+</script>
