make placeholders lowercase

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
-                                        <input class="uk-input" placeholder="SOCIAL SECURITY NUMBER" required type="text" name="social_security_number">
+                                        <input class="uk-input" placeholder="social security number" required type="text" name="social_security_number">
                                     </div>
                                 </div>
                                 <div class="uk-margin-small">
@@ -43,13 +43,13 @@
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
-                                            <input class="uk-input" placeholder="COURSE NUMBER" required type="text" name="course_number">
+                                            <input class="uk-input" placeholder="course number" required type="text" name="course_number">
                                         </div>
                                     </div>
                                     <div class="uk-margin-small">
                                         <div class="uk-inline uk-width-1-1">
                                             <span class="uk-form-icon uk-form-icon-flip"></span>
-                                            <input class="uk-input" placeholder="SECTION NUMBER" required type="text" name="section_number">
+                                            <input class="uk-input" placeholder="section number" required type="text" name="section_number">
                                         </div>
                                     </div>
                                     <div class="uk-margin-small">
@@ -70,7 +70,7 @@
                                 <div class="uk-margin-small">
                                     <div class="uk-inline uk-width-1-1">
                                         <span class="uk-form-icon uk-form-icon-flip"></span>
-                                        <input class="uk-input" placeholder="COURSE NUMBER" required type="text" name="course_number">
+                                        <input class="uk-input" placeholder="course number" required type="text" name="course_number">
                                     </div>
                                 </div>
                                 <div class="uk-margin-small">
